# Retainium

./: .replit  Cargo.toml  gradle.properties  index.html  package-lock.json  package.json  replit.md  开发计划.md  设计对话记录.md
.agents/memory/: MEMORY.md  android-import-environment.md  compose-sheet-dismissal.md
.github/workflows/: android-release.yml
app/: build.gradle.kts
app/src/androidTest/java/io/application/: ExampleInstrumentedTest.kt
app/src/main/java/io/application/: MainActivity.kt
app/src/main/java/io/application/game/: GameRepository.kt  GameState.kt  SavedState.kt
app/src/main/java/io/application/game/story/: Act3.kt  StoryModel.kt
app/src/main/java/io/application/model/: GameModels.kt
app/src/main/java/io/application/ui/: GameApp.kt
app/src/main/java/io/application/ui/hall/: HallPanel.kt  HallScreen.kt
app/src/main/java/io/application/ui/hall/components/: HallComponents.kt
app/src/main/java/io/application/ui/hall/panels/: HallPanels.kt
app/src/main/java/io/application/ui/hall/scene/: HallScene.kt
app/src/main/java/io/application/ui/lobby/: LobbyScreen.kt
app/src/main/java/io/application/ui/story/: StoryScreen.kt
app/src/main/java/io/application/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/test/java/io/application/: ExampleUnitTest.kt
app/src/test/java/io/application/game/: GameStateTest.kt
gradle/: libs.versions.toml
src/: App.tsx  config.rs  main.rs
src/installer/: adb.rs  mod.rs  rish.rs
src/sources/: fdroid.rs  github.rs  gitlab.rs  mod.rs
src/storage/: mod.rs
(+10 files in other folders)
